# demo-hello-executor-solana

./: .gitattributes  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
e2e/: .env.example  config.ts  initialize.ts  relay.ts  sendToSepolia.ts  sendToSepoliaOnChainQuote.ts  setupPeers.ts  tsconfig.json  types.ts  utils.ts
e2e/abi/: hello_executor.json
programs/hello-executor/: Cargo.toml
programs/hello-executor/src/: error.rs  executor_cpi.rs  lib.rs  message.rs  quoter_router_cpi.rs  resolver.rs
programs/hello-executor/src/instructions/: initialize.rs  mod.rs  receive_greeting.rs  register_peer.rs  request_relay.rs  request_relay_on_chain_quote.rs  send_greeting.rs  update_config.rs
programs/hello-executor/src/state/: config.rs  mod.rs  peer.rs  received.rs  wormhole_emitter.rs
tests/: hello-executor.ts
