[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
# Match NTT versions for compatibility with Solana 1.18.26
wormhole-io = "0.1.3"
wormhole-raw-vaas = "0.3.0-alpha.1"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "=1.18.26"

# Wormhole dependencies - same commits as NTT
wormhole-anchor-sdk = { git = "https://github.com/wormhole-foundation/wormhole-scaffolding.git", rev = "1e5f6d6db2e1d77cca291cd77b5b2e05e97b905e", default-features = false }
